fixed styling. might have gone with too dark of a purple but my daughter picked it out

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@
     max-width: 90%;
     margin: 3rem auto;
     padding: 2rem;
-    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 12px rgba(80, 79, 79, 0.2);
     border-radius: 10px;
+    /* background-color: #cfc0d1; */
   }
   
